--- a/html/wxmass.html
+++ b/html/wxmass.html
@@ -21,7 +21,7 @@
     </header>
     <section class="wxmass-box">
         <div class="wxmass-box-img">
-            <img src="../images/banner1.png" alt="">
+            <img src="../images/piliang.jpg" alt="">
         </div>
         <div class="wxmass-box-list">
             <ul id="shop-batch">
