--- a/html/notice.html
+++ b/html/notice.html
@@ -30,6 +30,7 @@
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/handlebars-v4.0.10.js"></script>
 <script src="../js/config.js"></script>
+<script src="../js/common.js"></script>
 <script src="../js/function.js"></script>
 <script src="../js/notice.js"></script>
 
