--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/common1.css">
+    <link rel="stylesheet" href="../css/homeCommon.css">
+    <link rel="stylesheet" href="../css/homePage.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/aui-slide.css">
 </head>
@@ -26,160 +25,58 @@
         <div class="aui-searchbar-btn aui-text-info" tapmode>搜索</div>
     </div>
 </header>
-<!--轮播图-->
 <nav>
-    <div id="aui-slide3">
-        <div class="aui-slide-wrap" >
-            <div class="aui-slide-node bg-dark">
-                <img src="../images/banner1.1.png" />
-            </div>
 
-            <div class="aui-slide-node bg-dark">
-                <img src="../images/banner2.2.png" />
-            </div>
-            <div class="aui-slide-node bg-dark">
-                <img src="../images/banner3.3.png" />
-            </div>
-        </div>
-        <div class="aui-slide-page-wrap"><!--分页容器--></div>
-    </div>
-</nav>
-<!--时间卡-->
-<div class="wrap" id="wrap">
-    <!--<ul class="tabClick">
-        <li class="active">
-            <div>10:00</div>
-            <div>抢购中</div>
-        </li>
-        <li>
-            <div>14:00</div>
-            <div>即将开始</div>
-        </li>
-        <li>
-            <div>18:00</div>
-            <div>即将开始</div>
-        </li>
-        <li>
-            <div>22:00</div>
-            <div>即将开始</div>
-        </li>
-    </ul>-->
-    <!--<div class="lineBorder">
-        <div class="lineDiv">&lt;!&ndash;移动的div&ndash;&gt;</div>
-    </div>
-    <div class="tabCon">
-        <div class="tabBox">
+    <!--轮播图-->
+    <div id="aui-slide3"></div>
 
-            <div id="tab2" class="tabList">
-                2
-            </div>
-            <div id="tab3" class="tabList">
-                3
-            </div>
-            <div id="tab4" class="tabList">
-                4
-            </div>
-        </div>
-    </div>-->
-    <div class="get-token"></div>
-    <div id="tab1" class="tabList">
-        <!--<div class="home-three">
-            <a href="javascript:;" class="display-box">
-                <div class="home-three-box">
-                    <img src="../images/11.jpg" alt="">
-                    <div class="home-three-price">
-                        <span>￥188</span>
-                        <span>￥998</span>
-                    </div>
-                </div>
-            </a>
-            <a href="javascript:;" class="display-box">
-                <div class="home-three-box">
-                    <img src="../images/11.jpg" alt="">
-                    <div class="home-three-price">
-                        <span>￥188</span>
-                        <span>￥998</span>
-                    </div>
-                </div>
-            </a>
-            <a href="javascript:;" class="display-box">
-                <div class="home-three-box">
-                    <img src="../images/11.jpg" alt="">
-                    <div class="home-three-price">
-                        <span >￥188</span>
-                        <span>￥998</span>
-                    </div>
-                </div>
-            </a>
+
+    <!--时间卡-->
+    <div class="wrap" id="wrap">
+        <ul class="tabClick">
+            <li data-hour-range="1" class="data-tab">
+                <div>0:00</div>
+                <div class="desc">即将开始</div>
+            </li>
+            <li data-hour-range="2" class="data-tab">
+                <div>4:00</div>
+                <div class="desc">即将开始</div>
+            </li>
+            <li data-hour-range="3" class="data-tab">
+                <div>8:00</div>
+                <div class="desc">即将开始</div>
+            </li>
+            <li data-hour-range="4" class="data-tab">
+                <div>12:00</div>
+                <div class="desc">即将开始</div>
+            </li>
+            <li data-hour-range="5" class="data-tab">
+                <div>16:00</div>
+                <div class="desc">即将开始</div>
+            </li>
+            <li data-hour-range="6" class="data-tab">
+                <div>20:00</div>
+                <div class="desc">即将开始</div>
+            </li>
+        </ul>
+        <!--<div class="lineBorder">
+            <div class="lineDiv">&lt;!&ndash;移动的div&ndash;&gt;</div>
         </div>-->
+        <div class="tabCon">
+            <div class="tabBox">
+                <div id="tab1" class="tabList">
 
-        <div class="home-shop-box">
-            <img src="../images/banner1.png" alt="">
-            <div class="home-shop-text">
-                <span>红包20.00元</span>
-                <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
-            </div>
-            <div class="home-shop-text-price">
-                <!--优惠列-->
-                <div class="index-shop-benefit">
-                    <p>优惠价:1008:00</p>
-                    <span>赚:31.2</span>
-                </div>
-                <!--销量列-->
-                <div class="index-shop-pin">
-                    <p>销量:269</p>
-                    <span>佣金率:31.2%</span>
-                </div>
-                <!--立即推广按钮-->
-                <div class="index-shop-push"><span>立即推广</span></div>
-            </div>
-        </div>
 
-        <div class="home-shop-box">
-            <img src="../images/banner1.png" alt="">
-            <div class="home-shop-text">
-                <span>红包20.00元</span>
-                <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
-            </div>
-            <div class="home-shop-text-price">
-                <!--优惠列-->
-                <div class="index-shop-benefit">
-                    <p>优惠价:1008:00</p>
-                    <span>赚:31.2</span>
+
+
                 </div>
-                <!--销量列-->
-                <div class="index-shop-pin">
-                    <p>销量:269</p>
-                    <span>佣金率:31.2%</span>
-                </div>
-                <!--立即推广按钮-->
-                <div class="index-shop-push"><span>立即推广</span></div>
-            </div>
-        </div>
-        <div class="home-shop-box">
-            <img src="../images/banner1.png" alt="">
-            <div class="home-shop-text">
-                <span>红包20.00元</span>
-                <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
-            </div>
-            <div class="home-shop-text-price">
-                <!--优惠列-->
-                <div class="index-shop-benefit">
-                    <p>优惠价:1008:00</p>
-                    <span>赚:31.2</span>
-                </div>
-                <!--销量列-->
-                <div class="index-shop-pin">
-                    <p>销量:269</p>
-                    <span>佣金率:31.2%</span>
-                </div>
-                <!--立即推广按钮-->
-                <div class="index-shop-push"><span>立即推广</span></div>
             </div>
         </div>
     </div>
-</div>
-<div class="clear"></div>
+    <div class="loading" >加载更多...</div>
+    <div class="no-info">没有更多信息了...</div>
+    <div class="clear"></div>
+</nav>
 
 <footer class="aui-bar aui-bar-tab" id="footer">
     <a href="javascript:;">
@@ -207,11 +104,85 @@
         </div>
     </a>
 </footer>
+<!--轮播模板-->
+<script type="text/x-handlebars-template" id="swiper-template">
+    <div class="aui-slide-wrap" >
+        {{#each (splitDetailImg this)}}
+        <div class="aui-slide-node bg-dark">
+            <a href="javascript:;" class="display-box">
+                <img src="{{name}}" />
+            </a>
+        </div>
+        {{/each}}
+    </div>
+    <!--分页容器-->
+    <div class="aui-slide-page-wrap"></div>
+</script>
+<!--秒杀数据模板-->
+<script type="text/x-handlebars-template" id="seckill-template">
+    <div class="home-three">
+        {{#each this}}
+        {{#productdetail}}
+        <a href="javascript:;" class="display-box">
+            <div class="home-three-box">
+                <img src="../images/lazy.gif" data-src="{{mainImageUrl}}" alt="">
+                <div class="home-three-price">
+                    <span>￥{{productPrice}}</span>
+                    <span>￥{{productOrginPrice}}</span>
+                </div>
+            </div>
+        </a>
+        {{/productdetail}}
+        {{/each}}
+    </div>
+</script>
+<script type="text/x-handlebars-template" id="seckill-list-template">
+
+    {{#each this}}
+    <!--新模板-->
+    <a href="seckill_detail.html?spuId={{spuId}}" class="display-box">
+        {{#productdetail}}
+        <div class="dis-list-box">
+            <div class="dis-shop-img">
+                <img src="../images/lazy.gif" data-src="{{mainImageUrl}}" alt="">
+            </div>
+            <div class="dis-list-content">
+                <div class="dis-shop-detail">
+                    <span class="hongbao">红包{{productHongbao}}元</span>
+                    <span  class="shop-list-name">{{name}}</span>
+                </div>
+                <div class="dis-price">
+                    <span>优惠价:{{productPrice}}</span>
+                    <span>销量:{{totalSales}}</span>
+                </div>
+                <div class="get-money">
+                    <span class="zhuan">赚:{{marketProfit}}</span>
+                    <span class="yongjinlv">佣金率：{{marketProfitPercent}}</span>
+                </div>
+                <div class="miaosha">
+                    {{#../skus}}
+                    <span class="seckill-count">剩余{{stock}}件</span>
+                    {{/../skus}}
+                    {{#if (compare ../autoRenew '==' '1')}}
+                    <span class="go-seckill">去推广</span>
+                    {{else}}
+                    <span class="none-seckill">去推广</span>
+                    {{/if}}
+                </div>
+            </div>
+        </div>
+        {{/productdetail}}
+    </a>
+    {{/each}}
+</script>
 <script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/handlebars-v4.0.10.js"></script>
+<script src="../js/config.js"></script>
 <script src="../js/api.2.0.js"></script>
 <script src="../js/search.js"></script>
 <script src="../js/function.js"></script>
-<!--<script src="../js/tab.js"></script>-->
+<script src="../js/common.js"></script>
+<script src="../js/aui-lazyload.js"></script>
 <script src="../js/aui-slide.js"></script>
 <script src="../js/index.js"></script>
 <script>
@@ -219,13 +190,14 @@
      * 判断是iOS或是安卓，改变数据的获取方式
      *
      * */
+
     var ua = navigator.userAgent.toLowerCase();
     if (/iphone|ipad|ipod/.test(ua)) {
         //alert('iOS的弹窗');
         var data={
             postType:'getToken'
         };
-        postSuccessToken(data);
+        //postSuccessToken(data);
 
     } else {
         //alert('android的弹窗。');
@@ -254,40 +226,6 @@
     var token=locationSearcher('token');
      localStorage.setItem('token',token);
 
-    $(document).ready(function () {
-        //轮播图
-        var slide3 = new auiSlide({
-            container:document.getElementById("aui-slide3"),
-            // "width":300,
-            "height":184,
-            "speed":500,
-            "autoPlay": 5000, //自动播放
-            "loop":true,
-            "pageShow":true,
-            "pageStyle":'dot',
-            'dotPosition':'center'
-        });
-
-        // 时间卡
-        var navTab=$('.tabClick');
-        var tabTop=navTab.offset().top;
-        console.log(tabTop);
-
-        var wh=$(window).height();
-        console.log(wh);
-
-
-        $('#tab1').scroll(function () {
-            var ws=$(window).scrollTop();
-            var s=wh-ws;
-            console.log(s);
-
-            if (ws>=tabTop){
-                //alert('小于200了')
-            }
-
-        });
-    });
 
 </script>
 </body>
