我的店铺分享--二维码删掉

--- a/html/myShop.html
+++ b/html/myShop.html
@@ -164,12 +164,12 @@
                 </div>
                 <p>复制链接</p>
             </li>
-            <li class="my-share-li share-erweima">
-                <div class="my-share-li-img">
-                    <img src="../images/ewm.png" alt="">
-                </div>
-                <p>二维码</p>
-            </li>
+            <!--<li class="my-share-li share-erweima">-->
+                <!--<div class="my-share-li-img">-->
+                    <!--<img src="../images/ewm.png" alt="">-->
+                <!--</div>-->
+                <!--<p>二维码</p>-->
+            <!--</li>-->
         </ul>
         <div class="my-share-del1"><img src="../images/del1.png" alt=""></div>
     </section>
