--- a/html/addaddress.html
+++ b/html/addaddress.html
@@ -49,7 +49,7 @@
 
 
 <script src="../js/jquery-3.0.0.min.js"></script>
-<script src="../js/LAreaData1.js"></script>
+<!--<script src="../js/LAreaData1.js"></script>-->
 <script src="../js/LAreaData2.js"></script>
 <script src="../js/LArea.min.js"></script>
 <script src="../js/config.js"></script>
