修改设置页面 和 个人中心

--- a/html/set.html
+++ b/html/set.html
@@ -21,11 +21,6 @@
 <nav>
     <div class="member-info-entry">
         <ul class="member-info-list">
-            <!--<li>
-                <a href="bindingtel.html" class="display-box">
-                    绑定手机号
-                </a>
-            </li>-->
             <li>
                 <a href="javascript:;" class="display-box">
                     <span>当前版本</span>
@@ -37,11 +32,12 @@
                     清除缓存
                 </a>
             </li>
-            <!--<li>
-                <a href="javascript:;" class="display-box get-token" >
-
+            <li>
+                <a href="aboutus.html" class="display-box">
+                    关于我们
                 </a>
-            </li>-->
+            </li>
+
         </ul>
     </div>
     <div class="out-login">退出登录</div>
