--- a/html/tixian.html
+++ b/html/tixian.html
@@ -15,6 +15,27 @@
         </a>
         <div class="aui-title my-aui-title">提现</div>
     </header>
+
+    <div class="con-pay-method">
+        <div class="con-pay-wechat">
+            <div class="con-pay-left">
+                <img src="../images/wx_pay.png" alt="">
+                <span>微信支付</span>
+                <span>微信安全支付</span>
+            </div>
+            <input class="aui-radio con-pay-select" checked type="radio" name="radio1" value="1">
+        </div>
+        <div class="con-pay-wechat">
+            <div class="con-pay-left">
+                <img src="../images/zfb.png" alt="">
+                <span>支付宝支付</span>
+                <span>支付宝安全支付</span>
+            </div>
+            <input class="aui-radio con-pay-select" type="radio" name="radio1" value="2">
+        </div>
+    </div>
+
+
     <section class="can-tixian-sales">
         <div class="tixian-box">
             <span class="tixian-text">可提现金额:</span>
