--- a/html/my.html
+++ b/html/my.html
@@ -22,6 +22,7 @@
 
                 <div class="userNameInput1">
                     <i class="userName">{{userNickName}}</i>
+                    <b class="xg1"></b>
                 </div>
 
                 <div class="userNameInput2">
